# serializer version: 1
# name: test_all_sensor_entities[binary_sensor.test_vmc_filter_cleaning_required-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.test_vmc_filter_cleaning_required',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Filter Cleaning Required',
    'platform': 'intelliclima',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_cleaning',
    'unique_id': '56789_filter_cleaning',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_sensor_entities[binary_sensor.test_vmc_filter_cleaning_required-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by unpublished IntelliClima API',
      'device_class': 'problem',
      'friendly_name': 'Test VMC Filter Cleaning Required',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_vmc_filter_cleaning_required',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_sensor_entities[binary_sensor.test_vmc_master_on_or_satellite_off_unit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.test_vmc_master_on_or_satellite_off_unit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Master (on) or Satellite (off) unit',
    'platform': 'intelliclima',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'master_satellite',
    'unique_id': '56789_master_satellite',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_sensor_entities[binary_sensor.test_vmc_master_on_or_satellite_off_unit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by unpublished IntelliClima API',
      'friendly_name': 'Test VMC Master (on) or Satellite (off) unit',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_vmc_master_on_or_satellite_off_unit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_sensor_entities[binary_sensor.test_vmc_winter_on_or_summer_off_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.test_vmc_winter_on_or_summer_off_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Winter (on) or Summer (off) mode',
    'platform': 'intelliclima',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'winter_summer',
    'unique_id': '56789_winter_summer',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_sensor_entities[binary_sensor.test_vmc_winter_on_or_summer_off_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by unpublished IntelliClima API',
      'friendly_name': 'Test VMC Winter (on) or Summer (off) mode',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_vmc_winter_on_or_summer_off_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
